--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-navigation/native": "^5.8.7",
     "@ui-kitten/components": "^5.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
