--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.7",
     "@react-navigation/native": "^5.8.7",
+    "@react-navigation/stack": "^5.12.4",
     "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.0.0",
+    "jetifier": "^1.6.6",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.13.0",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
