implementing react-native-camera module

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'foodprint' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'foodprintTests' do
     inherit! :complete
     # Pods for testing
