--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jetifier": "^1.6.6",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-camera": "^2.11.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.13.0",
