--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'foodprint' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'lottie-ios', :path => '../node_modules/lottie-ios'
+
+  pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
+
   target 'foodprintTests' do
     inherit! :complete
     # Pods for testing
