--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.0.0",
     "jetifier": "^1.6.6",
+    "lottie-ios": "^3.1.8",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-barcode-mask": "^1.2.4",
